Issue #3283202 by mhowe91: GC Intranet - search and menu icons stacking on mobile

--- a/css/wxtfixes.css
+++ b/css/wxtfixes.css
@@ -31,3 +31,10 @@
   min-height: unset;
   min-width: unset;
 }
+
+/* Fix search and menu icons stacking on mobile */
+@media only screen and (max-width: 479px) {
+  #wb-glb-mn ul {
+    min-width: 150px;
+  }
+}
